[gd_scene load_steps=9 format=2]

[ext_resource path="res://GodotLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/TheGirlNextDoor-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="GodotLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Rows" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextDisplay" type="Label" parent="Rows"]
margin_right = 976.0
margin_bottom = 463.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Placeholder Text"
valign = 1
autowrap = true

[node name="Cols" type="HBoxContainer" parent="Rows"]
margin_top = 467.0
margin_right = 976.0
margin_bottom = 552.0
custom_constants/separation = 15

[node name="PlayerInput" type="LineEdit" parent="Rows/Cols"]
margin_right = 819.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="OkButton" type="TextureButton" parent="Rows/Cols"]
margin_left = 834.0
margin_right = 919.0
margin_bottom = 85.0
rect_min_size = Vector2( 85, 85 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkLabel" type="Label" parent="Rows/Cols"]
margin_left = 934.0
margin_top = 5.0
margin_right = 976.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 3 )
text = "Ok"
[connection signal="text_entered" from="Rows/Cols/PlayerInput" to="." method="_on_PlayerInput_text_entered"]
[connection signal="pressed" from="Rows/Cols/OkButton" to="." method="_on_OkButton_pressed"]
